Correct distance and getName methods